feat: add cv-header html section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div class="cv">
+        <!-- cv-header -->
+        <header class="cv-header">
+            <div class="cv-container">
+                <div class="cv-header__avatar">
+                    <img src="" alt="photo" class="cv-header__avatar-photo">
+                </div>
+                <div class="cv-header__person">
+                    <h1 class="cv-header__person-name">Anton Sukhadolets</h1>
+                    <p class="cv-header__person-title">Rsschool student</p>
+                </div>
+            </div>
+        </header>
+        <!--/ cv-header -->
+    </div>
     
 </body>
 </html>
