--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML, CSS & Git Basics</title>
 </head>
+
 <body>
 
     <div class="cv">
-        <!-- cv-header -->
         <header class="cv-header">
-            <div class="cv-container">
-                <div class="cv-header__avatar">
-                    <img src="" alt="photo" class="cv-header__avatar-photo">
-                </div>
-                <div class="cv-header__person">
-                    <h1 class="cv-header__person-name">Anton Sukhadolets</h1>
-                    <p class="cv-header__person-title">Rsschool student</p>
-                </div>
-            </div>
-        </header>
-        <!--/ cv-header -->
+			<div class="cv-container">
+				<div class="cv-header-content">
+					<div class="cv-header-content__avatar">
+						<img src="image/photo.jpg" alt="avatar">
+					</div>
+					<div class="cv-header-content-data">
+						<h1 class="cv-header-content-data-name">Anton Sukhadolets</h1>
+						<div class="cv-header-content-data-title">Rsschool student</div>
+					</div>
+				</div>
+			</div>
+		</header>
     </div>
-    
+
 </body>
+
 </html>
