--- a/index.html
+++ b/index.html
@@ -6,24 +6,167 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML, CSS & Git Basics</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+        integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
 </head>
 
 <body>
 
     <div class="cv">
+        <!-- cv-header -->
         <header class="cv-header">
-			<div class="cv-container">
-				<div class="cv-header-content">
-					<div class="cv-header-content__avatar">
-						<img src="image/photo.jpg" alt="avatar">
-					</div>
-					<div class="cv-header-content-data">
-						<h1 class="cv-header-content-data-name">Anton Sukhadolets</h1>
-						<div class="cv-header-content-data-title">Rsschool student</div>
-					</div>
-				</div>
-			</div>
-		</header>
+            <div class="cv-container">
+                <div class="cv-header-content">
+                    <div class="cv-header-content__avatar">
+                        <img src="image/photo.jpg" alt="avatar">
+                    </div>
+                    <div class="cv-header-content-data">
+                        <h1 class="cv-header-content-data-name">Anton Sukhadolets</h1>
+                        <div class="cv-header-content-data-title">Rsschool student</div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- / cv-header -->
+        <!-- cv-main -->
+        <main class="cv-main">
+            <div class="cv-container">
+                <aside class="cv-main__about">
+                    <section class="cv-main__about-contacts">
+                        <h4 class="caption contact-caption">Contacts</h4>
+                        <ul class="list contact-list">
+                            <li class="list-item contact-list__item">
+                                <div class="icon">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                </div>
+                                <div class="contact-list__item-description">
+                                    <div class="title"><a href="https://goo.gl/maps/e8s5k1cQS69uA8Sh9"
+                                            target="_blank">Address</a></div>
+                                    <div class="info">
+                                        <address class="address">Poland,Krakow</address>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="list-item contact-list__item">
+                                <div class="icon">
+                                    <i class="fas fa-phone-square-alt"></i>
+                                </div>
+                                <div class="contact-list__item-description">
+                                    <div class="title"><a href="tel:+375333130021">Phone</a></div>
+                                    <div class="phone">+48792302263</div>
+                                </div>
+                            </li>
+                            <li class="list-item contact-list__item">
+                                <div class="icon">
+                                    <i class="fas fa-envelope-square"></i>
+                                </div>
+                                <div class="contact-list__item-description">
+                                    <div class="title"><a href="mailto:suhodoleca@gmail.com">Email</a></div>
+                                    <div class="email">suhodoleca@gmail.com</div>
+                                </div>
+                            </li>
+                            <li class="list-item contact-list__item">
+                                <div class="icon">
+                                    <i class="fab fa-linkedin"></i>
+                                </div>
+                                <div class="contact-list__item-description">
+                                    <div class="title"><a href="https://www.linkedin.com/in/anton-suhodolec-276283a3/"
+                                            target="_blank">Linkedin</a></div>
+                                    <div class="linkedin">anton-suhodolec</div>
+                                </div>
+                            </li>
+                        </ul>
+                    </section>
+                    <section class="cv-main__about-education">
+                        <h4 class="caption education-caption">Education</h4>
+                        <div class="cv-main__about-education-item">
+                            <p class="education-name">FRONT-END DEVELOPING</p>
+                            <p class="education-place">IT SPECIALISTS TRAINING CENTER SkillUP</p>
+                            <p class="education-years">October 2019 - February 2020</p>
+                        </div>
+                        <div class="cv-main__about-education-item">
+                            <p class="education-name">Logistician - economist</p>
+                            <p class="education-place">Institute for Advanced Qualifications and Retraining BNTU
+                            </p>
+                            <div class="education-years">2012-2013</div>
+                        </div>
+                        <div class="cv-main__about-education-item">
+                            <p class="education-name">Electrician - engineer</p>
+                            <p class="education-place">Belarusian National Technical University</p>
+                            <p class="education-years">2007-2012</p>
+                        </div>
+                    </section>
+                    <section class="cv-main__about-skills">
+                        <h4 class="caption skills-caption">Skills</h4>
+                        <ul class="skills-list">
+                            <li class="skills-list__item">HTML5</li>
+                            <li class="skills-list__item">CSS3</li>
+                            <li class="skills-list__item">JavaScript</li>
+                            <li class="skills-list__item">Chart.js</li>
+                            <li class="skills-list__item">jQuery</li>
+                            <li class="skills-list__item">React.js(basic)</li>
+                            <li class="skills-list__item">Less</li>
+                            <li class="skills-list__item">Sass</li>
+                            <li class="skills-list__item">Git</li>
+                            <li class="skills-list__item">BEM methodology</li>
+                            <li class="skills-list__item">Gulp 4(basic)</li>
+                            <li class="skills-list__item">Node.js(basic)</li>
+                            <li class="skills-list__item">Npm(basic)</li>
+                            <li class="skills-list__item">Figma</li>
+                        </ul>
+                    </section>
+                    <section class="cv-main__about-social">
+                        <h4 class="caption social-caption">Social</h4>
+                        <ul class="list social-list">
+                            <li class="list-item social-list__item">
+                                <div class="icon">
+                                    <i class="fab fa-linkedin"></i>
+                                </div>
+                                <div class="social-list__item-description">
+                                    <div class="title"><a href="#">Linkedin</a></div>
+                                    <div class="linkedin">anton-suhodolec</div>
+                                </div>
+                            </li>
+                            <li class="list-item social-list__item">
+                                <div class="icon">
+                                    <i class="fab fa-vk"></i>
+                                </div>
+                                <div class="social-list__item-description">
+                                    <div class="title"><a href="https://vk.com/id10370480" target="_blank">Vkontakte</a>
+                                    </div>
+                                    <div class="VK">id10370480<div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="list-item social-list__item">
+                                <div class="icon">
+                                    <i class="fab fa-instagram-square"></i>
+                                </div>
+                                <div class="social-list__item-description">
+                                    <div class="title"><a href="https://www.instagram.com/"
+                                            target="_blank">Instagram</a></div>
+                                    <div class="instagram">Instagram</div>
+                                </div>
+                            </li>
+                            <li class="list-item social-list__item">
+                                <div class="icon">
+                                    <i class="fab fa-twitter-square"></i>
+                                </div>
+                                <div class="social-list__item-description">
+                                    <div class="title"><a href="https://twitter.com/?lang=ru"
+                                            target="_blank">Twitter</a></div>
+                                    <div class="twitter">Twitter</div>
+                                </div>
+                            </li>
+                        </ul>
+                    </section>
+                </aside>
+            </div>
+        </main>
+        <!-- / cv-main -->
     </div>
 
 </body>
