feat: add basic cv-header styles

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                     <div class="cv-header-content__avatar">
                         <img src="image/photo.jpg" alt="avatar">
                     </div>
-                    <div class="cv-header-content-data">
-                        <h1 class="cv-header-content-data-name">Anton Sukhadolets</h1>
-                        <div class="cv-header-content-data-title">Rsschool student</div>
+                    <div class="cv-header-content__data">
+                        <h1 class="cv-header-content__data-name">Anton Sukhadolets</h1>
+                        <p class="cv-header-content__data-title">Rsschool student</p>
                     </div>
                 </div>
             </div>
