feat: add english level in skills section

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                             <li class="skills-list__item">Node.js(basic)</li>
                             <li class="skills-list__item">Npm(basic)</li>
                             <li class="skills-list__item">Figma</li>
+                            <li class="skills-list__item">English - B1</li>
                         </ul>
                     </section>
                     <section class="cv-main__about-social">
