--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML, CSS & Git Basics</title>
+    <title>HTML, CSS &amp; Git Basics</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Prata&display=swap"
@@ -121,7 +121,7 @@
                     </ul>
                 </section>
                 <section class="cv-main__education">
-                    <h2 class="cv-main__education-title secondary-title">Education & Learning</h2>
+                    <h2 class="cv-main__education-title secondary-title">Education &amp; Learning</h2>
                     <ul class="cv-main__education-list">
                         <li class="cv-main__education-list__item">
                             <h4 class="cv-main__education-list__item-profession fourthly-title">Front-End Developing
@@ -150,7 +150,7 @@
                         <pre>
                                                 <code>
                     function smallEnough(a, limit) {
-                    &nbsp;&nbsp;return a.every(elem => elem &lt;= limit); 
+                    &nbsp;&nbsp;return a.every(elem =&gt; elem &lt;= limit); 
                         }
                                             </code>
                                         </pre>
@@ -187,7 +187,7 @@
                                                 <code>
         function zipWith(fn,a0,a1) {
         &nbsp;&nbsp;const result = [];
-        &nbsp;&nbsp;let length = (a0.length > a1.length) ? a1.length : &nbsp;&nbsp;a0.length;
+        &nbsp;&nbsp;let length = (a0.length &gt; a1.length) ? a1.length : &nbsp;&nbsp;a0.length;
         &nbsp;&nbsp;for(let i = 0; i &lt; length; i++){
         &nbsp;&nbsp;&nbsp;&nbsp;result.push(fn(a0[i],a1[i])); 
         &nbsp;&nbsp;} 
