fix: trim trailing whitespaces

--- a/index.html
+++ b/index.html
@@ -231,8 +231,7 @@
                     Challenge by UpSkillMe
                     <a href="https://github.com/rolling-scopes-school/js-fe-course-en/tree/main/UpSkillMe"
                         target="_blank">
-                        <svg id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                            viewBox="0 0 552.8 205.3">
+                        <svg id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 552.8 205.3">
                             <style>
                                 .st0 {
                                     fill: #fff
